--- a/dev/index.html
+++ b/dev/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Halogen6 Template</title>
+    <link rel="stylesheet" href="./tailwind.css">
   </head>
   <body>
     <script src="./index.js"></script>
